# tfhe

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: bootstrapping.rs  encryption.rs  key_generation.rs
examples/: encrypt.rs  homomorphic_xor.rs
src/: bootstrap_internals.rs  bootstrapping.rs  bootstrapping_internals_fft.rs  encryption.rs  gates.rs  lib.rs  lwe.rs  numerics.rs  polynomial.rs  tgsw.rs  tlwe.rs  tsgw.rs
src/circuits/: circuits.rs  mod.rs  utils.rs
tests/: boostrapping_tests.rs  bootstrapping_tests.rs
