[package]
name = "tfhe"
version = "0.1.0"
authors = ["Isak Sunde Singh <isak.sunde.singh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
num-traits = "0.2.11"

rustfft = {version = "3.0.1", optional = true}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.1"

[features]
fft = [ "rustfft" ]
bootstrapping = []

default = [ "fft" ]

[profile.bench]
debug = true

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "key_generation"
harness = false

[[bench]]
name = "bootstrapping"
harness = false
